--- a/main.html
+++ b/main.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
-
 <html>
-  <head>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-
-  <body>
-    <body id="grid">
-      <div>1</div>
-      <div>2</div>
-      <div>3</div>
-      <div>4</div>
-      <div>5</div>
-      <div>6</div>
-      <div>7</div>
-      <div>8</div>
-      <div>9</div>
-      <div>10</div>
-    </body>
-    <script type="text/javascript" src="./script.js"></script>
-  </body>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div id="grid">
+    <div class="item i1">1</div>
+    <div class="item i2">2</div>
+    <div class="item i3">3</div>
+    <div class="item i4">4</div>
+    <div class="item i5">5</div>
+    <div class="item i6">6</div>
+    <div class="item i7">7</div>
+    <div class="item i8">8</div>
+    <div class="item i9">9</div>
+    <div class="item i10">10</div>
+  </div>
+</body>
 </html>
+
